# qt-virt-manager

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.3.3-pre1  CMakeQt4.txt  CMakeQt5.txt  Changelog  Licenses  README.md  _config.yml  index.html  index.md  meson.build  meson_options.txt  params.json  qt-virt-manager.desktop  qt-virt-manager.desktop.in  qt-virt-manager.spec  source_tree_description
HomeBrew/: qt-virt-manager.rb  qtermwidget5.rb
cmake/: CMakeQt4.txt  CMakeQt5.txt  FindCACard.cmake  FindGLib2.cmake  FindGObject.cmake  FindGio.cmake  FindKRDC.cmake  FindLibSSH.cmake  FindLibUtf8Proc.cmake  FindLibVNCServer.cmake  FindLibVirt.cmake  FindSpice1.cmake  FindSpiceClientGLib2.cmake  FindUtf8Proc.cmake  libvirt-config.cmake
src/: donate_dialog.cpp  donate_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  qt-virt-manager.qrc  qt_remote_viewer.qrc  qt_virt_manager.qrc  version.h.in
src/connection_list/: conn_item_index.cpp  conn_item_model.h  conn_list_widget.cpp  connections.cpp  connections.h  toolbar.cpp  toolbar.h
src/create_widgets/common/: _changed.h  _checked_widget.cpp  _checked_widget.h  _list_widget.cpp  _list_widget.h  _qwidget.cpp  _qwidget.h  _qwidget_threaded.cpp  _qwidget_threaded.h  click_label.h
src/create_widgets/domain/: _changed.cpp  _changed.h  _qwidget.cpp  _qwidget.h  _qwidget_threaded.cpp  _tab.cpp  _tab.h  create_virt_domain.cpp  create_virt_domain.h  device_address.cpp  device_address.h  domain_widgets.h  restore_panel.cpp  restore_panel.h
src/create_widgets/interface/: create_interface.cpp  create_interface.h
src/create_widgets/network/: create_virt_network.cpp  create_virt_network.h  create_virt_network_adv.cpp  create_virt_network_adv.h  create_virt_network_ass.cpp  create_virt_network_ass.h
src/create_widgets/nwfilter/: create_virt_nwfilter.cpp  create_virt_nwfilter.h
src/create_widgets/secret/: create_virt_secret.cpp  create_virt_secret.h
src/create_widgets/snapshot/: _disk_item.cpp  _disk_item.h  _disk_item.h.autosave  _disks.cpp  _disks.h  _snapshot_flags.cpp  _snapshot_flags.h  _snapshot_stuff.cpp  _snapshot_stuff.h  create_snapshot_dialog.cpp  create_snapshot_dialog.h  create_snapshot_flags.cpp  create_snapshot_flags.h  delete_snapshot_flags.cpp  delete_snapshot_flags.h  revert_snapshot_flags.cpp  revert_snapshot_flags.h  set_disks_data_thread.cpp  set_disks_data_thread.h  snapshot_action_dialog.cpp  snapshot_action_dialog.h
src/create_widgets/storage/: create_pool.cpp  create_pool.h  create_volume.cpp  create_volume.h
src/dock_head_widgets/: bar_name.cpp  bar_name.h  dock_head_widget.cpp  dock_head_widget.h  dock_widget.cpp  dock_widget.h
src/icons/: index.theme
src/layout/: conn_item_index.cpp  conn_item_index.h  conn_item_model.cpp  conn_item_model.h  conn_list_delegate.cpp  conn_list_delegate.h  conn_list_widget.cpp  conn_list_widget.h  conn_menu.cpp  conn_menu.h  progressbar_delegate.cpp  progressbar_delegate.h  search_thread.cpp  search_thread.h  wait_local_conn.cpp  wait_local_conn.h
src/log_doc/: log_doc.cpp  log_doc.h
src/log_dock/: log_dock.cpp  log_dock.h  log_dock_menu.cpp  log_dock_menu.h  text_browser.cpp  text_browser.h
src/menubar/: dock_menu.cpp  dock_menu.h  donate_dialog.cpp  donate_dialog.h  file_menu.cpp  file_menu.h  help_menu.cpp  help_menu.h  menu_bar.cpp  menu_bar.h  view_menu.cpp  view_menu.h
src/misc/domain/: kvm_guest_i686.xml  lxc_example1.xml  lxc_example2.xml  qemu_guest_x86_64.xml  xen_fullvirt_guest_BIOS_boot.xml  xen_fullvirt_guest_derect-kernel_boot.xml  xen_paravirt_guest_bootloader.xml  xen_paravirt_guest_direct-kernel_boot.xml
src/misc/network/: default.xml  default6.xml  host-bridge.xml  local.xml  private.xml
src/proxy_widget/: proxy_widget.cpp  proxy_widget.h
src/qtermwidget/: CMakeLists.txt  README
src/qtermwidget/lib/: CMakeLists.txt  Emulation.h  HistorySearch.h  Pty.cpp  Pty.h  Session.cpp  Session.h  k3processcontroller.h  kpty.cpp  kptydevice.cpp  kptydevice.h  kptyprocess.cpp  qtermwidget.cpp  qtermwidget.h  vm_qtermwidget.cpp
src/qtermwidget/src/: CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  main.cpp
src/settings/: conn_settings.cpp  conn_settings.h
src/soft_touched/: st_stacked_widget.cpp  st_stacked_widget.h
src/ssh_tunnel/: ssh_common.c  ssh_common.h  ssh_tunnel.cpp  ssh_tunnel.h  tcp_server.cpp  tcp_server.h  tcp_server_thread.cpp  tcp_server_thread.h  tcp_socket_thread.cpp  tcp_socket_thread.h
src/state_monitor/: domain_monitor_thread.cpp  domain_monitor_thread.h  domain_state_monitor.cpp  domain_state_monitor.h  domain_state_viewer.cpp  domain_state_viewer.h  svg_tamplates.h  svg_templates.h
src/task_bar/: task_bar.cpp  task_bar.h
src/task_warehouse/: task_warehouse.cpp  task_warehouse.h
src/toolbar/: toolbar.cpp  toolbar.h
src/translations/: qt_virt_manager_it.ts  qt_virt_manager_ru.ts
src/tray/: traywidget.cpp  traywidget.h
src/virt_objects/: _virt_thread.cpp  _virt_thread.h  control_thread.cpp  control_thread.h  h_navigation_label.cpp  h_navigation_label.h  index.cpp  index.h  model.cpp  model.h  open_file_menu.cpp  open_file_menu.h  tree_view.cpp  tree_view.h  virt_entity_config.h  virt_entity_control.cpp  virt_entity_control.h  virt_entity_enums.h  virt_event_loop.cpp  virt_event_loop.h  wait_load_label.cpp  wait_load_label.h
src/virt_objects/virt_connect/: conn_alive_thread.cpp  conn_alive_thread.h  conn_callbacks.cpp  conn_callbacks.h  conn_element.cpp  conn_element.h
src/virt_objects/virt_domain/: create_virt_domain.cpp  create_virt_domain.h  domain_control.cpp  domain_control.h  domain_control_menu.h  (+17 more)
src/vm_viewer/: README.md  click_label.cpp  click_label.h  get_url_dialog.cpp  get_url_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  qt-remote-viewer-mime.xml  qt-remote-viewer.desktop.in  ssh_tunnel.cpp  ssh_tunnel.h  transformation_mode_menu.cpp  transformation_mode_menu.h  viewer_toolbar.cpp  viewer_toolbar.h  vm_state_widget.cpp  vm_state_widget.h  vm_viewer.cpp  vm_viewer.h  vm_viewer_only.cpp  vm_viewer_only.h
src/wait_thread/: wait_thread.cpp  wait_thread.h
(+827 files in other folders)
